style: fix z-index issue

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -71,7 +71,7 @@
     .filter{
         display: none;
         position: fixed;
-        z-index: 3;
+        z-index: 2;
         background: white;
         overflow-y: scroll;
         height: 90vh;
